--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
            
          </p>
          <div class="btns">
-            <a href="C:\Users\HP\Desktop\lab6\index.html">Continue to Website</a>
+            <a href="https://burgerwithfries.github.io/main-page/">Continue to Website</a>
             
          </div>
       </div>
